# mmap-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mmap_tools/: __init__.py  cli.py  markdown.py  models.py  reader.py  writer.py
tests/: test_core.py
