[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap-tools"
version = "0.1.0"
description = "Read, write, and convert MindJet MindManager .mmap files. Pure Python, no dependencies."
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [{name = "lifehackjohn"}]
keywords = ["mindmanager", "mindjet", "mmap", "mind-map", "productivity", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

[project.scripts]
mmap-tools = "mmap_tools.cli:main"

[tool.setuptools.package-data]
mmap_tools = ["py.typed"]

[project.urls]
Homepage = "https://github.com/lifehackjohn/mmap-tools"
Repository = "https://github.com/lifehackjohn/mmap-tools"
Issues = "https://github.com/lifehackjohn/mmap-tools/issues"
